force-app/main/default/objects/Answer__c/Answer__c.object-meta.xml
<CustomObject>
    <description>This table stores the correct answer for each question, with foreign keys referencing the corresponding question and answer option, and a boolean field indicating whether the answer is correct or not.</description>
    <label>Answer</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Answer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>