force-app/main/default/objects/Answer__c/fields/AnswerOption__c.field-meta.xml
<CustomField>
    <fullName>AnswerOption__c</fullName>
    <label>AnswerOption</label>
    <referenceTo>AnswerOption__c</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>