force-app/main/default/objects/Answer__c/fields/AnswerText__c.field-meta.xml
<CustomField>
    <fullName>AnswerText__c</fullName>
    <label>Answer Text</label>
    <type>TextArea</type>
</CustomField>